--- a/public/css/chart.css
+++ b/public/css/chart.css
@@ -1,46 +1,54 @@
-/* Tooltip container */
-.tooltip {
-    position: relative;
-    display: inline-block;
-    border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+body {
+ font-family: 'Open Sans', sans-serif;
 }
 
-/* Tooltip text */
-.tooltip .tooltiptext {
-    visibility: hidden;
-    width: 120px;
-    background-color: #555;
-    color: #fff;
-    text-align: center;
-    padding: 5px 0;
-    border-radius: 6px;
-
-    /* Position the tooltip text */
-    position: absolute;
-    z-index: 1;
-    bottom: 125%;
-    left: 50%;
-    margin-left: -60px;
-
-    /* Fade in tooltip */
-    opacity: 0;
-    transition: opacity 1s;
+.graph .labels.x-labels {
+ text-anchor: middle;
 }
 
-/* Tooltip arrow */
-.tooltip .tooltiptext::after {
-    content: "";
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    margin-left: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: #555 transparent transparent transparent;
+.graph .labels.y-labels {
+ text-anchor: end;
 }
 
-/* Show the tooltip text when you mouse over the tooltip container */
-.tooltip:hover .tooltiptext {
-    visibility: visible;
-    opacity: 1;
+.graph .ticks {
+  stroke: blue;
+  stroke-width: 1;
+}
+.graph .division{
+ stroke:blue;
+ stroke-dasharray:5,5;
+
+ stroke-width:0.5;
+}
+
+/* X Y axis */
+.graph .grid {  
+ stroke: black;
+ stroke-dasharray: 0;
+ stroke-width: 1;
+}
+
+.labels {
+ font-size: 13px;
+}
+
+.label-title {
+ font-weight: bold;
+ text-transform: uppercase;
+ font-size: 12px;
+ fill: black;
+}
+
+.data {
+ fill: red;
+ stroke-width: 1; 
+}
+
+.chart {
+ background: white;
+ width: 500px;
+ height: 100px;
+ border-left: 1px dotted #555;
+ border-bottom: 1px dotted #555;
+ padding: 20px 20px 20px 0;
 }
