--- a/public/css/chart.css
+++ b/public/css/chart.css
@@ -1,13 +1,34 @@
+
+body{
+	margin: 0;
+	padding: 0;
+}
 .chartLabel{
 	font-size: 19px;
 	padding: 5px;
-	background: #00796B;
+	background: #F44336;
 	color: white;
 	opacity : 0.9;
 }
+.caption-box{
+	background: white;
+	color: #009688;
+	height: auto;
+	width: 100vw;
+	margin: 0;
+	left: 0;
+    text-align: center;
+}
+.caption-box .caption{
+
+}
+
+.caption-box .sub-caption{
+
+}
 
 .plotTooltip{
-	background: #00796B;
+	background: #F44336;
 	color: white;
 	padding: 5px;
 }
@@ -31,7 +52,12 @@
 .chart .plot-circle{
 	stroke: #009688;
 	stroke-width: 1;
-	fill: #009688;
+	fill: white;
+	z-index : 99;
+}
+
+.chart .plot-circle:hover{
+	stroke: #F44336;
 }
 
 .chart .axis{
@@ -50,6 +76,10 @@
 .chart .chart-line{
 	stroke: #607D8B;
 	stroke-width: 1;
+}
+
+.chart .chart-line:hover{
+	stroke: #F44336;
 }
 
 .chart .ticks{
