--- a/public/css/chart.css
+++ b/public/css/chart.css
@@ -4,11 +4,8 @@ body{
 	padding: 0;
 }
 .chartLabel{
-	font-size: 19px;
-	padding: 5px;
-	background: #F44336;
-	color: white;
-	opacity : 0.9;
+	font-weight : 600;
+	font-size : 15px;
 }
 .caption-box{
 	background: white;
@@ -38,7 +35,7 @@ body{
 
 .chart .axis-label{
 	font-size: 13px;
-	text-align : center;
+	text-align : left;
 }
 
 .chart .xaxis-label{
@@ -75,6 +72,11 @@ body{
 }
 .chart .chart-line{
 	stroke: #607D8B;
+	stroke-width: 1;
+}
+
+.chart .vertical-line{
+	stroke: red;
 	stroke-width: 1;
 }
 
