--- a/public/css/chart.css
+++ b/public/css/chart.css
@@ -10,11 +10,8 @@ body{
 .caption-box{
 	background: white;
 	color: #4F4F4F;
-	height: auto;
-	width: 100vw;
-	margin: 0;
-	left: 0;
     text-align: center;
+    margin-left: 10vw;
 }
 .caption-box .caption{
 }
@@ -57,10 +54,14 @@ body{
 	stroke-width: 1.4;
 	fill: white;
 	z-index : 99;
+	-webkit-transition: all 0.7s;
+	-ms-transition: all 0.7s;
+	transition: all 0.7s;
 }
 
 .chart .plot-circle:hover{
 	stroke: #F44336;
+	stroke-width: 3;
 }
 
 .chart .axis{
