--- a/public/css/chart.css
+++ b/public/css/chart.css
@@ -3,6 +3,10 @@ body{
 	margin: 0;
 	padding: 0;
 }
+#graph{
+    margin-left: auto;
+    margin-right: auto;
+}
 .chartLabel{
 	font-weight : 600;
 	font-size : 15px;
@@ -11,7 +15,8 @@ body{
 	background: white;
 	color: #4F4F4F;
     text-align: center;
-    margin-left: 10vw;
+    margin-left: auto;
+    margin-right: auto;
 }
 .caption-box .caption{
 }
