--- a/development/css/chart.css
+++ b/development/css/chart.css
@@ -10,7 +10,13 @@ body{
     margin-left: auto;
     margin-right: auto;
 }
-
+#graphcross svg{
+	float : left;
+	display : block;
+	margin-left: 0%;
+	margin-top : 0%;
+	-webkit-transition: top 0.7s, left 0.7s;
+}
 #graph svg{
 	float : left;
 	display : block;
@@ -135,6 +141,11 @@ body{
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+}
+
+.chart .data-column-cross{
+	stroke-width : 0.8;
+	-webkit-transition: all 0.2s;
 }
 
 .chart .data-column{
